--- a/Lab6_Maths/bin/.classpath
+++ b/Lab6_Maths/bin/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/Lab6_ArrayLib/lib/pitest-1.1.7.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="commons-math3-3.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
